@@ -731,6 +731,8 @@
   <person id="marcel">
     <name>Marcel Telka</name>
     <email>marcel@telka.sk</email>
+    <im id="Jabber">marcel@jabber.sk</im>
+    <bugzilla-account>marcel@telka.sk</bugzilla-account>
   </person>
   <!-- former sl translation coordinator -->
   <person id="minmax">
