@@ -525,6 +525,11 @@
     <_language id="sk">Slovak</_language>
     <coordinator id="marcel"/>
     <webpage>http://telka.sk/linux/sk-l10n/</webpage>
+    <bugzilla>http://bugzilla.gnome.org/</bugzilla>
+    <bugzilla-product>l10n</bugzilla-product>
+    <bugzilla-component>Slovak [sk]</bugzilla-component>
+    <mailing-list>sk-i18n@lists.linux.sk</mailing-list>
+    <mailing-list-subscribe>https://lists.linux.sk/mailman/listinfo/sk-i18n</mailing-list-subscribe>
   </team>
   <team id="sl">
     <_language id="sl">Slovenian</_language>
