@@ -1,3 +1,8 @@
+2007-11-16  Marcel Telka  <marcel@telka.sk>
+
+	* people.xml.in: Updated my personal information.
+	* translation-teams.xml.in: Updated Slovak [sk] team details.
+
 2007-11-16  Claude Paroz  <claude@2xlibre.net>
 
 	* gnome-modules.xml.in:
